--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,8 +1,12 @@
 .html {
-  //opacity: 70%;
-  width: 100%;
+  height: 100%;
   margin: 0px;
-  background-image: url('/background2.png');
+  background-image: url('/backgroundphoto16.jpg');
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -11,11 +15,57 @@
   a,
   a:link,
   a:visited {
-    color: rgb(48, 43, 58);
+    color: white;
     text-decoration: none;
   }
-  h2,
-  p {
-    color: rgb(48, 43, 58);
+  h2 {
+    color: white;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    list-style: none;
+    padding: 0;
+  }
+  nav {
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    padding-top: 10px;
+    position: fixed;
+    top: 0px;
+    padding: 12px;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 30px;
+    ul {
+      padding-top: 20px;
+      border-top: solid 1.2px white;
+    }
+  }
+  input {
+    color: black;
+    background: rgba(8, 6, 91, 0.1);
+    border: solid white 1.2px;
+    border-radius: 8px;
+    padding: 0 6px;
+    margin: 5px 5px 15px;
+    width: 100px;
+    height: 20px;
+    font-family: 'Montserrat', sans-serif;
+  }
+  Image {
+    padding-top: -30px;
   }
 }
+
+//for mobile
+// @media only screen (min-width: 768px)
+//for ipad @media only screen (min-width: 1100px);
