--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,47 +1,29 @@
 .main {
-  // background-image: url('/background2.png');
-  // background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  // padding: 6rem;
-  min-height: 100vh;
-  justify-content: center;
   letter-spacing: 1.5px;
+  padding-top: 8rem;
 }
 .div {
   display: flex;
   flex-direction: column;
-  // padding: 0.8rem 2.5rem;
-  background: rgba(180, 172, 172, 0.7);
-  border-radius: 16px;
-  backdrop-filter: blur(10.2px);
-  -webkit-backdrop-filter: blur(10.2px);
+  text-align: center;
   padding: 8px 16px;
-  button {
-    background: rgba(185, 179, 179, 0.1);
-    border: solid black 1.2px;
-    border-radius: 8px;
-    padding: 5px 6px;
-    margin: 5px 5px 15px;
-    width: 140px;
-    font-family: 'Montserrat', sans-serif;
-  }
+  margin: auto;
+
   h2 {
-    // padding-bottom: 8px;
-    margin: 12px 8px 4px;
     letter-spacing: 3px;
-    //font-family: 'CourierPrime', sans-serif;
   }
   p {
-    border-top: solid 1.2px rgb(3, 3, 3);
+    color: white;
+    border-top: solid 1.2px white;
     padding: 15px;
     font-size: 16px;
     margin: 8px;
     padding-bottom: 20px;
     margin-bottom: 10px;
-    border-bottom: solid 1.2px rgb(3, 3, 3);
+    border-bottom: solid 1.2px rgb(254, 253, 253);
     font-weight: 400;
     letter-spacing: 1.5px;
   }
