--- a/app/signUp/layout.module.scss
+++ b/app/signUp/layout.module.scss
@@ -1,18 +1,64 @@
 .html {
-  background: linear-gradient(
-      217deg,
-      rgba(219, 7, 64, 0.8),
-      rgba(255, 0, 0, 0) 80.71%
-    ),
-    linear-gradient(127deg, rgba(248, 230, 67, 0.8), rgba(0, 255, 0, 0) 70.71%),
-    linear-gradient(127deg, rgba(238, 238, 233, 0.8), rgba(0, 255, 0, 0) 70.71%),
-    linear-gradient(336deg, rgba(48, 42, 128, 0.8), rgba(0, 0, 255, 0) 80.71%);
-  width: 100%;
   height: 100%;
   margin: 0px;
+  background-image: url('/backgroundphoto3.jpg');
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-repeat: no-repeat;
+
+  a,
+  a:link,
+  a:visited {
+    color: white;
+    text-decoration: none;
+  }
+  ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    list-style: none;
+    text-decoration: none;
+    padding: 0;
+  }
+  nav {
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    padding-top: 10px;
+    position: fixed;
+    top: 0px;
+    padding: 12px;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 30px;
+    ul {
+      padding-top: 20px;
+      border-top: solid 1.2px white;
+    }
+  }
+  input {
+    color: black;
+    background: rgba(8, 6, 91, 0.1);
+    border: solid white 1.2px;
+    border-radius: 8px;
+    padding: 0 6px;
+    margin: 5px 5px 15px;
+    width: 100px;
+    height: 20px;
+    font-family: 'Montserrat', sans-serif;
+  }
+  Image {
+    padding-top: -30px;
+  }
 }
