--- a/app/signUp/page.module.scss
+++ b/app/signUp/page.module.scss
@@ -1,9 +1,49 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   text-align: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding: 2rem;
+  margin-top: 8rem;
+}
+.form {
+  padding: 10px;
+  color: black;
+  display: inline-block;
+  justify-content: flex-start;
+  margin: auto;
+  border-radius: 10px;
+  line-height: 2rem;
+  flex-direction: row;
+  text-transform: lowercase;
+  font-weight: 700;
+  font-size: 1rem;
+  letter-spacing: 0.2vw;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  input {
+    width: 90%;
+    margin: auto;
+    text-align: center;
+    background-color: rgba(185, 179, 179, 0);
+    border: solid 1.2px rgb(43, 38, 92);
+    border-radius: 3px;
+  }
+  button {
+    background: rgba(185, 179, 179, 0);
+    border: solid rgb(43, 38, 92) 1.2px;
+    border-radius: 8px;
+    padding: 5px 6px;
+    margin: 5px 5px 15px;
+    width: 140px;
+    font-family: 'Montserrat', sans-serif;
+  }
+  button:hover {
+    border: solid rgb(241, 58, 95) 1.2px;
+  }
 }
