--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     font-size: 0.8rem;
     list-style: none;
     padding: 0;
@@ -51,18 +52,13 @@
     }
   }
   input {
-    color: black;
+    color: white;
     background: rgba(8, 6, 91, 0.1);
     border: solid white 1.2px;
     border-radius: 8px;
-    padding: 0 6px;
-    margin: 5px 5px 15px;
-    width: 100px;
-    height: 20px;
+    width: 80px;
+    height: 15px;
     font-family: 'Montserrat', sans-serif;
-  }
-  Image {
-    padding-top: -30px;
   }
 }
 
