--- a/app/signUp/layout.module.scss
+++ b/app/signUp/layout.module.scss
@@ -22,17 +22,17 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     font-size: 0.8rem;
     list-style: none;
-    text-decoration: none;
+    // text-decoration: none;
     padding: 0;
   }
   nav {
     text-align: center;
     width: 100%;
-    height: 50px;
-    margin: auto;
-    padding-top: 10px;
+    height: 30px;
+    margin: 0;
     position: fixed;
     top: 0px;
     padding: 12px;
@@ -48,17 +48,12 @@
     }
   }
   input {
-    color: black;
+    color: white;
     background: rgba(8, 6, 91, 0.1);
     border: solid white 1.2px;
     border-radius: 8px;
-    padding: 0 6px;
-    margin: 5px 5px 15px;
-    width: 100px;
-    height: 20px;
+    width: 80px;
+    height: 15px;
     font-family: 'Montserrat', sans-serif;
-  }
-  Image {
-    padding-top: -30px;
   }
 }
