--- a/app/signUp/page.module.scss
+++ b/app/signUp/page.module.scss
@@ -1,25 +1,26 @@
 .main {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   text-align: center;
   padding: 2rem;
-  margin-top: 8rem;
+  margin-top: 10rem;
+  // width: 100vw;
+  // height: 100vh;
 }
 .form {
+  //display: flex;
+  // flex-direction: column;
+  text-align: left;
   padding: 10px;
   color: black;
   display: inline-block;
-  justify-content: flex-start;
+  //justify-content: flex-start;
   margin: auto;
-  border-radius: 10px;
-  line-height: 2rem;
-  flex-direction: row;
+  //line-height: 1rem;
   text-transform: lowercase;
   font-weight: 700;
   font-size: 1rem;
   letter-spacing: 0.2vw;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(4px);
@@ -27,9 +28,9 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   input {
-    width: 90%;
+    width: 100%;
     margin: auto;
-    text-align: center;
+    text-align: left;
     background-color: rgba(185, 179, 179, 0);
     border: solid 1.2px rgb(43, 38, 92);
     border-radius: 3px;
