--- a/app/signUp/signIn/page.module.scss
+++ b/app/signUp/signIn/page.module.scss
@@ -1,16 +1,17 @@
 .main {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-top: 12rem;
   padding: 2rem;
+  height: 100vh;
+  width: 100vw;
 }
 .form {
   padding: 10px;
   margin: auto;
-  border-radius: 10px;
   line-height: 2rem;
-  flex-direction: row;
   text-transform: lowercase;
   font-weight: 400;
   font-size: 1rem;
@@ -23,20 +24,21 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   input {
-    width: 90%;
+    // width: 100%;
     margin: auto;
+    padding: 0;
     text-align: center;
-    background-color: rgba(185, 179, 179, 0);
+    // background-color: rgba(185, 179, 179, 0);
     border: solid 1.2px rgb(43, 38, 92);
     border-radius: 3px;
   }
   button {
-    background: rgba(185, 179, 179, 0);
+    background: rgba(185, 179, 179, 0.1);
     border: solid rgb(43, 38, 92) 1.2px;
     border-radius: 8px;
     padding: 5px 6px;
     margin: 5px 5px 15px;
-    width: 140px;
+    width: 6rem;
     font-family: 'Montserrat', sans-serif;
   }
   button:hover {
