--- a/app/dashboard/signin/page.module.scss
+++ b/app/dashboard/signin/page.module.scss
@@ -1,14 +1,16 @@
 .main {
-  // display: flex;
-  // flex-direction: column;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   margin-top: 12rem;
   padding: 2rem;
-  height: 100vh;
+  // height: 100vh;
   width: 100vw;
 }
 .form {
+  // display: flex;
+  // flex-direction: column;
   padding: 10px;
   margin: auto;
   line-height: 2rem;
@@ -16,7 +18,7 @@
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -24,7 +26,7 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   input {
-    // width: 100%;
+    width: 100%;
     margin: auto;
     padding: 0;
     text-align: center;
