--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,5 +1,5 @@
 .html {
-  height: 100%;
+  height: 100vh;
   margin: 0px;
   background-image: url('/backgroundphoto16.jpg');
   background-position: center;
@@ -52,7 +52,7 @@
     }
   }
   input {
-    color: white;
+    // color: white;
     background: rgba(8, 6, 91, 0.1);
     border: solid white 1.2px;
     border-radius: 8px;
