--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -33,10 +33,9 @@
   }
   nav {
     text-align: center;
-    width: 100%;
-    height: 50px;
-    margin: auto;
-    padding-top: 10px;
+    width: 100vw;
+    height: 30px;
+    margin: 0;
     position: fixed;
     top: 0px;
     padding: 12px;
