--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -32,7 +32,7 @@
     text-align: center;
     // background-color: rgba(185, 179, 179, 0);
     border: solid 1.2px rgb(43, 38, 92);
-    border-radius: 3px;
+    // border-radius: 3px;
   }
   button {
     background: rgba(185, 179, 179, 0.1);
