--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -33,7 +33,8 @@
     text-align: left;
     background-color: rgba(185, 179, 179, 0);
     border: solid 1.2px rgb(43, 38, 92);
-    border-radius: 3px;
+    // border-radius: 1.8px;
+    height: 1rem;
   }
   button {
     background: rgba(185, 179, 179, 0);
