--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -1,19 +1,31 @@
 .main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   text-align: center;
-  margin-top: 12rem;
+  margin-top: 4rem;
   padding: 2rem;
   // height: 100vh;
   width: 100vw;
 
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  // background: rgba(255, 255, 255, 0.2);
+  // border-radius: 16px;
+  // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  // backdrop-filter: blur(5px);
+  // -webkit-backdrop-filter: blur(5px);
+  // border: 1px solid rgba(255, 255, 255, 0.3);
+
+  ul {
+    display: flex;
+    flex-direction: column;
+  }
+  li {
+    backdrop-filter: blur(18.2px);
+    -webkit-backdrop-filter: blur(18.2px);
+    background: rgba(203, 198, 198, 0.2);
+    margin: 0.5rem;
+    border-radius: 7px;
+  }
 }
 .searchForm {
   padding: 10px;
