--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -47,13 +47,13 @@
       border-top: solid 1.2px white;
     }
   }
-  input {
-    // color: white;
-    background: rgba(8, 6, 91, 0.1);
-    border: solid white 1.2px;
-    border-radius: 8px;
-    width: 80px;
-    height: 15px;
-    font-family: 'Montserrat', sans-serif;
-  }
+  // input {
+  //   // color: white;
+  //   background: rgba(8, 6, 91, 0.1);
+  //   border: solid white 1.2px;
+  //   border-radius: 8px;
+  //   width: 80px;
+  //   height: 15px;
+  //   font-family: 'Montserrat', sans-serif;
+  // }
 }
