--- a/app/dashboard/profile/[username]/page.module.scss
+++ b/app/dashboard/profile/[username]/page.module.scss
@@ -3,22 +3,24 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 12rem;
+  margin-top: 8rem;
   // padding: 2rem;
   // height: 100vh;
   width: 100vw;
-
   // padding: 10px;
   // margin: auto;
-  line-height: 2rem;
+  // line-height: 2rem;
   text-transform: lowercase;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  div {
+    backdrop-filter: blur(19.2px);
+    -webkit-backdrop-filter: blur(19.2px);
+    background: rgba(203, 198, 198, 0.2);
+    margin: 0.5rem;
+    border-radius: 7px;
+    padding: 1rem;
+  }
 }
