Add cloudinary to the CreateGrooveForm and EditGrooveFrom pages

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-  flex-direction: column;
+  // flex-direction: column;
   align-items: center;
 
   a,
