--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -1,12 +1,16 @@
 .main {
   display: flex;
-  flex-direction: row;
+  // flex-direction: column;
   align-items: center;
   text-align: center;
   margin-top: 4rem;
   padding: 2rem;
   // height: 100vh;
   width: 100vw;
+  ul {
+    display: flex;
+    flex-direction: column;
+  }
 
   // background: rgba(255, 255, 255, 0.2);
   // border-radius: 16px;
