--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -3,7 +3,6 @@
   flex-direction: row;
   align-items: center;
   text-align: center;
-  margin-top: 3rem;
   padding: 2rem;
   width: 100vw;
 
@@ -22,17 +21,13 @@
   }
 }
 .div {
+  margin: 7rem 0rem;
   display: flex;
   flex-direction: column;
-
   padding: 1.5rem;
-}
-.groove {
   color: black;
-  margin: 1rem;
-  padding: 1rem;
   backdrop-filter: blur(18.2px);
   -webkit-backdrop-filter: blur(18.2px);
-  background: rgba(203, 198, 198, 0.2);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 7px;
 }
