--- a/app/dashboard/profile/[username]/page.module.scss
+++ b/app/dashboard/profile/[username]/page.module.scss
@@ -5,6 +5,8 @@
   text-align: center;
   margin-top: 8rem;
   width: 100vw;
+  // height: 100vh;
+
   text-transform: lowercase;
   font-weight: 400;
   font-size: 1rem;
