--- a/app/dashboard/profile/[username]/page.module.scss
+++ b/app/dashboard/profile/[username]/page.module.scss
@@ -11,13 +11,40 @@
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
+}
+.div {
+  display: flex;
+  flex-direction: column;
+  backdrop-filter: blur(19.2px);
+  -webkit-backdrop-filter: blur(19.2px);
+  background: rgba(203, 198, 198, 0.2);
+  margin: 0.5rem;
+  border-radius: 7px;
+  padding: 1rem;
 
-  div {
-    backdrop-filter: blur(19.2px);
-    -webkit-backdrop-filter: blur(19.2px);
-    background: rgba(203, 198, 198, 0.2);
-    margin: 0.5rem;
-    border-radius: 7px;
-    padding: 1rem;
+  .form {
+    text-align: left;
+    padding: 10px;
+    color: black;
+    display: inline-block;
+    margin: auto;
+    text-transform: lowercase;
+    // font-weight: 700;
+    font-size: 1rem;
+    letter-spacing: 0.2vw;
+    // background: rgba(255, 255, 255, 0.5);
+    border-radius: 16px;
+    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // backdrop-filter: blur(4px);
+    // -webkit-backdrop-filter: blur(4px);
+    // border: 1px solid rgba(255, 255, 255, 0.3);
+
+    input {
+      width: 100%;
+      margin: auto;
+      text-align: left;
+      background-color: rgba(185, 179, 179, 0);
+      border: solid 1.2px rgb(43, 38, 92);
+    }
   }
 }
