--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   letter-spacing: 1.5px;
-  padding-top: 8rem;
+  margin: 0;
   width: 100vw;
 }
 .div {
@@ -11,10 +11,13 @@
   flex-direction: column;
   text-align: center;
   padding: 8px 16px;
-  margin: auto;
-
+  margin-bottom: 14rem;
+  width: 100vw;
   h2 {
     letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.7rem;
   }
   p {
     color: white;
