--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -10,6 +10,7 @@
     font-size: 0.8rem;
     line-height: 0.8rem;
     margin: auto;
+    color: black;
   }
   h3 {
     font-size: 1rem;
@@ -30,4 +31,20 @@
   -webkit-backdrop-filter: blur(18.2px);
   background: rgba(255, 255, 255, 0.5);
   border-radius: 7px;
+}
+.profileImg {
+  border-radius: 50%;
+}
+.comments {
+  ul {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0rem;
+    padding: 1rem;
+    color: black;
+    backdrop-filter: blur(18.2px);
+    -webkit-backdrop-filter: blur(18.2px);
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 7px;
+  }
 }
