--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,13 +1,14 @@
 .html {
   height: 100vh;
   margin: 0px;
-  background-image: url('/backgroundphoto3.jpg');
-  background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: url('/backgroundphoto3.jpg');
+  // background-position: center;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-color: #01030e;
   display: flex;
   flex-direction: column;
   align-items: center;
