--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -1,12 +1,13 @@
 .main {
   display: flex;
-  // flex-direction: column;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   margin-top: 4rem;
   padding: 2rem;
   // height: 100vh;
   width: 100vw;
+
   ul {
     display: flex;
     flex-direction: column;
