Add profie photo instead of profile photo to footer

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -68,6 +68,9 @@
   //   font-family: 'Montserrat', sans-serif;
   // }
 }
+.profileImg {
+  border-radius: 50%;
+}
 
 //for mobile
 // @media only screen (min-width: 768px)
