--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -37,3 +37,27 @@
   -webkit-backdrop-filter: blur(18px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.searchInput {
+  width: 16rem;
+  height: 1.6rem;
+  padding: 0.5rem;
+  color: rgb(255, 255, 255);
+  line-height: 2rem;
+  font-weight: 400;
+  font-size: 0.7rem;
+  letter-spacing: 0.2vw;
+  background: rgba(255, 255, 255, 0);
+  border-radius: 12px;
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+  border: 1px solid rgba(255, 253, 253, 1);
+}
+
+.searchButton {
+  background: rgba(255, 255, 255, 0);
+  border: none;
+}
+.searchButton:hover {
+  cursor: pointer;
+}
