--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -72,6 +72,30 @@
   border-radius: 50%;
 }
 
+.searchInput {
+  width: 7rem;
+  height: 1.4rem;
+  padding: 0;
+  color: rgb(255, 255, 255);
+  line-height: 2rem;
+  text-transform: lowercase;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.2vw;
+  background: rgba(255, 255, 255, 0);
+  border-radius: 12px;
+  backdrop-filter: blur(18px);
+  -webkit-backdrop-filter: blur(18px);
+  border: 1px solid rgba(255, 253, 253, 1);
+}
+
+.searchButton {
+  background: rgba(255, 255, 255, 0);
+  border: none;
+}
+.searchButton:hover {
+  cursor: pointer;
+}
 //for mobile
 // @media only screen (min-width: 768px)
 //for ipad @media only screen (min-width: 1100px);
