--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -4,44 +4,54 @@
   padding: 2rem;
   margin-top: 5rem;
   width: 100vw;
+  background-color: rgba(5, 12, 32, 0.8);
+  height: 100vh;
 }
 
 .form {
-  text-align: left;
-  padding: 10px;
-  color: black;
+  color: white;
   display: inline-block;
-  margin: auto;
-  text-transform: lowercase;
+  margin: 0 2px;
   font-weight: 700;
   font-size: 1rem;
   letter-spacing: 0.2vw;
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgb(255, 255, 255);
+  padding: 15px 50px 10px;
 
   input {
     width: 100%;
-    margin: auto;
     text-align: left;
     background-color: rgba(185, 179, 179, 0);
-    border: solid 1.2px rgb(43, 38, 92);
+    border-bottom: solid 1.2px white;
+    border-top: none;
+    border-right: none;
+    margin: 0.5rem;
+    color: white;
+  }
+  input:hover {
+    border-bottom: solid 1.2px rgba(255, 255, 255, 0.3);
   }
 
   button {
-    background: rgba(185, 179, 179, 0);
-    border: solid rgb(43, 38, 92) 1.2px;
+    background: rgba(255, 255, 255, 0.3);
+    color: white;
+    border: solid 1.2px rgba(255, 255, 255, 0.3);
     border-radius: 8px;
-    padding: 5px 6px;
-    margin: 5px 5px 15px;
-    width: 140px;
-    font-family: 'Montserrat', sans-serif;
+    padding: 7px;
+    margin: 7px;
+    width: 6rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    align-items: center;
+    cursor: pointer;
   }
-
   button:hover {
-    border: solid rgb(250, 234, 7) 1.2px;
+    background: rgba(2, 4, 32, 0.3);
+    // border: solid rgba(255, 255, 255, 0.3) 1.2px;
   }
+}
+.button {
+  margin-top: 20px;
+  margin-bottom: 7px;
 }
