--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,14 +1,7 @@
 .html {
   height: 100vh;
   margin: 0px;
-  // background-image: url('/backgroundphoto3.jpg');
-  // background-position: center;
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-color: #01030e;
+  background-color: rgba(5, 12, 32, 0.8);
   display: flex;
   flex-direction: column;
   align-items: center;
