--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -13,22 +13,41 @@
   padding: 8px 16px;
   margin-bottom: 14rem;
   width: 100vw;
+
   h2 {
     letter-spacing: 3px;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 1.7rem;
+    font-size: 2rem;
   }
   p {
     color: white;
-    border-top: solid 1.2px white;
+    line-height: 1.4rem;
+    border: solid 1.2px white;
     padding: 15px;
     font-size: 16px;
-    margin: 8px;
+    margin: 0;
     padding-bottom: 20px;
     margin-bottom: 10px;
     border-bottom: solid 1.2px rgb(254, 253, 253);
     font-weight: 400;
     letter-spacing: 1.5px;
+  }
+  button {
+    background-color: rgba(255, 255, 255, 0.7);
+    // #ffdc69;
+    color: black;
+    border: solid 1.2px rgba(255, 255, 255, 0.3);
+    padding: 5px 7px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+    // font-weight: 600;
+    // letter-spacing: 1.5px;
+    text-transform: lowercase;
   }
 }
