--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -5,7 +5,7 @@
   margin-top: 5rem;
   width: 100vw;
   background-color: rgba(5, 12, 32, 0.8);
-  height: 100vh;
+  // height: 100vh;
 }
 
 .form {
