--- a/app/dashboard/grooves/create-groove/page.module.scss
+++ b/app/dashboard/grooves/create-groove/page.module.scss
@@ -1,41 +1,40 @@
 .main {
-  color: black;
   display: flex;
   flex-direction: row;
   align-items: center;
   text-align: center;
-  margin-top: 7rem;
+  margin: 4rem 0;
   padding: 1rem;
   width: 100vw;
-}
-
-.div {
-  // display: flex;
-  // flex-direction: column;
-  padding: 2rem;
-  margin: 1rem 2rem 7rem;
-  line-height: 2rem;
-  // text-transform: lowercase;
-  font-weight: 400;
-  font-size: 1rem;
-  letter-spacing: 0.2vw;
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  text-align: left;
+  color: white;
 
   h3 {
-    margin: auto;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.5rem;
   }
+}
+
+.form {
+  color: white;
+  display: inline-block;
+  margin: 0 1rem 1rem;
+  font-weight: 500;
+  font-size: 1rem;
+  letter-spacing: 0.2vw;
+  border: 1px solid rgb(255, 255, 255);
+  padding: 15px 40px 10px;
 
   input {
     width: 100%;
-    margin: auto;
     text-align: left;
     background-color: rgba(185, 179, 179, 0);
-    border: solid 1.2px rgb(43, 38, 92);
+    border-bottom: solid 1.2px white;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    margin: 0.5rem;
+    color: white;
   }
 }
