--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,10 +1,16 @@
 .html {
   height: 100vh;
+  // width: 100vw;
   margin: 0px;
   background-color: rgba(5, 12, 32, 0.8);
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-size: cover;
+  padding: 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 
   a,
   a:link,
@@ -12,35 +18,35 @@
     color: white;
     text-decoration: none;
   }
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.8rem;
-    list-style: none;
-    // text-decoration: none;
-    padding: 0;
-  }
-  nav {
-    text-align: center;
-    width: 100%;
-    height: 30px;
-    margin: 0;
-    position: fixed;
-    top: 0px;
-    padding: 12px;
-  }
-  footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding: 30px;
-    ul {
-      padding-top: 20px;
-      border-top: solid 1.2px white;
-    }
-  }
+
+  // ul {
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: space-between;
+  //   align-items: center;
+  //   font-size: 0.8rem;
+  //   list-style: none;
+  //   padding: 0;
+  // }
+  // nav {
+  //   text-align: center;
+  //   width: 100%;
+  //   height: 30px;
+  //   margin: 0;
+  //   position: fixed;
+  //   top: 0px;
+  //   padding: 12px;
+  // // }
+  // footer {
+  //   position: fixed;
+  //   bottom: 0;
+  //   width: 100%;
+  //   padding: 30px;
+  //   ul {
+  //     padding-top: 20px;
+  //     border-top: solid 1.2px white;
+  //   }
+  // }
   // input {
   //   // color: white;
   //   background: rgba(8, 6, 91, 0.1);
