--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,4 +1,5 @@
 .html {
+  width: 100vw;
   height: 100vh;
   margin: 0px;
   background-image: url('/backgroundphoto16.jpg');
@@ -10,6 +11,7 @@
   background-size: cover;
   display: flex;
   align-items: center;
+  background-attachment: fixed;
 
   a,
   a:link,
@@ -41,8 +43,8 @@
     position: fixed;
     top: 0px;
     padding: 12px;
-
     transition: all 0.3s ease-out;
+    z-index: 1000;
   }
 }
 .profileImg {
@@ -83,6 +85,9 @@
 .searchButton:hover {
   cursor: pointer;
 }
-//for mobile
+.logo {
+  z-index: 10000;
+}
+//for ipad
 // @media only screen (min-width: 768px)
-//for ipad @media only screen (min-width: 1100px);
+//for laptop @media only screen (min-width: 1100px);
