--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -5,6 +5,12 @@
   letter-spacing: 1.5px;
   margin: 0;
   width: 100vw;
+  span {
+    letter-spacing: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+  }
 }
 .div {
   display: flex;
@@ -22,7 +28,6 @@
   }
   p {
     color: white;
-    line-height: 1.4rem;
     border: solid 1.2px white;
     padding: 15px;
     font-size: 16px;
@@ -32,6 +37,7 @@
     border-bottom: solid 1.2px rgb(254, 253, 253);
     font-weight: 400;
     letter-spacing: 1.5px;
+    line-height: 1.6rem;
   }
   button {
     background-color: rgba(255, 255, 255, 0.7);
