Implement ingredient table post to create groove

--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -2,6 +2,7 @@
   align-items: center;
   text-align: center;
   padding: 2rem;
+  padding-bottom: 5rem;
   margin-top: 5rem;
   width: 100vw;
   background-color: rgba(5, 12, 32, 0.8);
@@ -25,6 +26,7 @@
     border-bottom: solid 1.2px white;
     border-top: none;
     border-right: none;
+    border-left: none;
     margin: 0.5rem;
     color: white;
   }
