--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -26,6 +26,7 @@
     border-bottom: solid 1.2px white;
     border-top: none;
     border-right: none;
+    border-left: none;
   }
   button {
     background: rgba(185, 179, 179, 0.3);
