--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -14,7 +14,7 @@
   p {
     margin: 0;
   }
-  p:nth-of-type(5) {
+  .fadeIn:last-of-type {
     border-bottom: solid white 1.2px;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
