--- a/app/dashboard/grooves/my-grooves/page.module.scss
+++ b/app/dashboard/grooves/my-grooves/page.module.scss
@@ -7,11 +7,14 @@
   margin-top: 6rem;
   padding: 2rem;
   width: 100vw;
-  z-index: 1;
+  // z-index: 1;
   ul {
     display: flex;
     flex-direction: column;
     color: black;
+    li {
+      margin: 0.5rem;
+    }
   }
 
   h2 {
