--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -3,26 +3,35 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 4rem;
-  padding: 2rem;
-  // height: 100vh;
+  margin-top: 2.5rem;
   width: 100vw;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.2vw;
+  color: white;
+  padding: 0;
 
   ul {
+    margin: 2rem 0;
     display: flex;
     flex-direction: column;
-    color: black;
+    color: white;
+    img {
+      width: 60vw;
+    }
   }
   li {
     padding: 1rem;
     border-radius: 16px;
-    background: rgba(255, 255, 255, 0.2);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // background: rgba(255, 255, 255, 0.2);
+    // box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(18px);
     -webkit-backdrop-filter: blur(18px);
   }
 }
 .searchForm {
+  position: fixed;
+  top: 0;
   padding: 10px;
   margin: auto;
   line-height: 2rem;
