--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -6,8 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-size: cover;
-  padding: 0;
+  // background-size: cover;
+  // padding: 0;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
