--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,5 +1,5 @@
 .html {
-  width: 100vw;
+  // width: 100vw;
   height: 100vh;
   margin: 0px;
   background-image: url('/backgroundphoto16.jpg');
@@ -41,10 +41,14 @@
     height: 30px;
     margin: 0;
     position: fixed;
-    top: 0px;
+    top: 0;
     padding: 12px;
-    transition: all 0.3s ease-out;
+    transition: transform 1s ease;
     z-index: 1000;
+    // ul {
+    //   position: sticky;
+    //   top: 0;
+    // }
   }
 }
 .profileImg {
