--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -18,7 +18,7 @@
   text-align: center;
   padding: 8px 16px;
   margin-bottom: 14rem;
-  width: 100vw;
+  // width: 100vw;
 
   h2 {
     letter-spacing: 3px;
