--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -4,7 +4,7 @@
   padding: 2rem;
   padding-bottom: 5rem;
   margin-top: 5rem;
-  width: 100vw;
+  // width: 100vw;
   background-color: rgba(5, 12, 32, 0.8);
   // height: 100vh;
 }
