--- a/app/dashboard/grooves/my-grooves/page.module.scss
+++ b/app/dashboard/grooves/my-grooves/page.module.scss
@@ -1,32 +1,142 @@
 .main {
-  color: black;
+  color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
   text-align: center;
-  margin-top: 6rem;
-  padding: 2rem;
+  margin-top: 10rem;
+  justify-content: center;
   width: 100vw;
-  // z-index: 1;
+}
+
+.link {
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+  border-radius: 8px;
+  padding: 6px 3px;
+  margin: 7px;
+  width: 9rem;
+  height: 2.7rem;
+  color: white;
+  align-items: center;
+
+  background: hsla(285, 76%, 36%, 1);
+
+  background: linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsl(346, 100%, 65%) 100%
+  );
+
+  background: -moz-linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsla(346, 100%, 65%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsla(346, 100%, 65%, 1) 100%
+  );
+}
+.linkView {
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  display: flex;
+  justify-content: center;
+  font-size: 0.8rem;
+  border-radius: 8px;
+  padding: 4px 2px;
+  margin: 7px;
+  margin-top: -2rem;
+  width: 6rem;
+  height: 2rem;
+  color: white;
+  align-items: center;
+
+  background: hsla(285, 76%, 36%, 1);
+
+  background: linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsl(346, 100%, 65%) 100%
+  );
+
+  background: -moz-linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsla(346, 100%, 65%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    180deg,
+    hsla(285, 76%, 36%, 1) 0%,
+    hsla(346, 100%, 65%, 1) 100%
+  );
+}
+
+.div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   ul {
     display: flex;
     flex-direction: column;
-    color: black;
+
     li {
-      margin: 0.5rem;
+      width: 65vw;
+      margin: 0.5rem 0;
+      text-align: center;
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 1.2px solid white;
+
+      h3 {
+        text-transform: uppercase;
+        font-size: 1.2rem;
+        letter-spacing: 0.2rem;
+        margin-bottom: 0;
+      }
+      img {
+        border-radius: 10px;
+        width: 40vw;
+      }
     }
   }
-
-  h2 {
-    font-weight: 400;
-    font-size: 1.5rem;
+}
+.text {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  border-bottom: solid 1.2px white;
+  padding: 1rem;
+  margin: 1rem 2rem;
+  h4 {
+    margin: 0;
   }
 }
-.div {
-  backdrop-filter: blur(18.2px);
-  -webkit-backdrop-filter: blur(18.2px);
-  background: rgba(203, 198, 198, 0.2);
-  margin: 0.5rem;
-  border-radius: 7px;
-  padding: 1rem;
+.textForList {
+  font-size: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  border-bottom: solid 1.2px white;
+  // padding: 1rem;
+  margin: -4rem 2rem 1rem;
+  h4 {
+    margin: 0;
+  }
+}
+.buttons {
+  display: flex;
 }
