--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,16 +1,10 @@
 .html {
   height: 100vh;
-  // width: 100vw;
   margin: 0px;
-  background-color: rgba(5, 12, 32, 0.8);
+  background-color: #050c20cc;
   display: flex;
   flex-direction: column;
   align-items: center;
-  // background-size: cover;
-  // padding: 0;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
 
   a,
   a:link,
@@ -18,42 +12,4 @@
     color: white;
     text-decoration: none;
   }
-
-  // ul {
-  //   display: flex;
-  //   flex-direction: row;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   font-size: 0.8rem;
-  //   list-style: none;
-  //   padding: 0;
-  // }
-  // nav {
-  //   text-align: center;
-  //   width: 100%;
-  //   height: 30px;
-  //   margin: 0;
-  //   position: fixed;
-  //   top: 0px;
-  //   padding: 12px;
-  // // }
-  // footer {
-  //   position: fixed;
-  //   bottom: 0;
-  //   width: 100%;
-  //   padding: 30px;
-  //   ul {
-  //     padding-top: 20px;
-  //     border-top: solid 1.2px white;
-  //   }
-  // }
-  // input {
-  //   // color: white;
-  //   background: rgba(8, 6, 91, 0.1);
-  //   border: solid white 1.2px;
-  //   border-radius: 8px;
-  //   width: 80px;
-  //   height: 15px;
-  //   font-family: 'Montserrat', sans-serif;
-  // }
 }
