--- a/app/dashboard/grooves/[grooveId]/page.module.scss
+++ b/app/dashboard/grooves/[grooveId]/page.module.scss
@@ -1,10 +1,15 @@
 .main {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
-  width: 96vw;
+  min-width: 150px;
 
+  box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+  backdrop-filter: blur(8.4px);
+  -webkit-backdrop-filter: blur(8.4px);
+  background-color: rgba(5, 12, 32, 0.2);
   p {
     font-size: 0.8rem;
     line-height: 0.8rem;
@@ -32,8 +37,11 @@
   margin: 3rem 0 4rem 0;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 1.5rem;
   color: white;
+  align-items: center;
+  text-align: center;
 }
 .profileImg {
   border-radius: 50%;
