--- a/app/dashboard/grooves/my-grooves/page.module.scss
+++ b/app/dashboard/grooves/my-grooves/page.module.scss
@@ -6,7 +6,7 @@
   text-align: center;
   margin-top: 10rem;
   justify-content: center;
-  width: 100vw;
+  width: 96vw;
 }
 
 .link {
@@ -87,6 +87,10 @@
     flex-direction: column;
 
     li {
+      box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+      backdrop-filter: blur(8.4px);
+      -webkit-backdrop-filter: blur(8.4px);
+      background-color: rgba(5, 12, 32, 0.3);
       width: 65vw;
       margin: 0.5rem 0;
       text-align: center;
@@ -139,4 +143,75 @@
 }
 .buttons {
   display: flex;
+}
+
+.carousel {
+  overflow: hidden;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.inner {
+  white-space: nowrap;
+  transition: transform 0.3s;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+}
+.carouselItem {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 30rem;
+  img {
+    padding: 0 20px;
+  }
+}
+.arrow {
+  background: none;
+
+  //  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+.indicatorButton {
+  background-color: rgba(0, 0, 0, 0);
+}
+.indicatorButtons {
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  cursor: pointer;
+}
+.carouselButtons {
+  display: flex;
+  justify-content: space-evenly;
+}
+.indicators {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  align-items: center;
+}
+.indicators > button {
+  margin: 5px;
+  background-color: rgba(0, 0, 0, 0);
+}
+.indicatorSymbol {
+  color: rgb(73, 59, 59);
+}
+.indicatorSymbolActive {
+  color: white;
+}
+.linkGroove {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.carouselItemContent {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
