--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100vw;
+  width: 96vw;
   margin-top: 6.5rem;
   font-weight: 400;
   font-size: 1rem;
@@ -83,6 +83,10 @@
     flex-direction: column;
 
     li {
+      box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+      backdrop-filter: blur(8.4px);
+      -webkit-backdrop-filter: blur(8.4px);
+      background-color: rgba(5, 12, 32, 0.3);
       width: 65vw;
       margin: 0.5rem 0;
       text-align: center;
