--- a/app/dashboard/grooves/participation-grooves/page.module.scss
+++ b/app/dashboard/grooves/participation-grooves/page.module.scss
@@ -6,7 +6,7 @@
   text-align: center;
   margin-top: 10rem;
   justify-content: center;
-  width: 100vw;
+  width: 96vw;
 }
 
 .link {
@@ -86,6 +86,10 @@
     display: flex;
     flex-direction: column;
     li {
+      box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+      backdrop-filter: blur(8.4px);
+      -webkit-backdrop-filter: blur(8.4px);
+      background-color: rgba(5, 12, 32, 0.3);
       width: 65vw;
       margin: 0.5rem;
       text-align: center;
