--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -1,7 +1,8 @@
 .html {
   height: 100vh;
   margin: 0px;
-  background-color: #050c20cc;
+  //background-color: rgba(5, 12, 32, 0.8);
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
