--- a/app/dashboard/(auth)/login/page.module.scss
+++ b/app/dashboard/(auth)/login/page.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 11rem;
+  margin-top: 7rem;
   padding: 2rem;
   width: 100vw;
   color: white;
@@ -15,7 +15,9 @@
   font-size: 1rem;
   letter-spacing: 0.2vw;
   border: solid 1.2px white;
-  padding: 15px 50px 10px;
+  background: rgba(2, 4, 32, 0.2);
+
+  padding: 0.8rem 2rem 0.5rem;
 
   input {
     color: white;
@@ -29,17 +31,16 @@
     border-left: none;
   }
   button {
-    background: rgba(185, 179, 179, 0.3);
-    border: solid rgba(255, 255, 255, 0.3) 1.2px;
+    background-color: rgba(5, 12, 32, 0);
     border-radius: 8px;
     padding: 7px;
-    margin: 7px;
+    margin: 0.2rem;
     width: 6rem;
     color: white;
     align-items: center;
   }
   button:hover {
-    background: rgba(2, 4, 32, 0.3);
+    background: rgba(2, 4, 32, 0.5);
     // border: solid rgba(255, 255, 255, 0.3) 1.2px;
   }
 }
