--- a/app/dashboard/(auth)/registration/page.module.scss
+++ b/app/dashboard/(auth)/registration/page.module.scss
@@ -4,30 +4,31 @@
   padding: 2rem;
   padding-bottom: 5rem;
   margin-top: 5rem;
-  // width: 100vw;
-  background-color: rgba(5, 12, 32, 0.8);
+  width: 97vw;
   // height: 100vh;
 }
 
 .form {
+  background-color: rgba(5, 12, 32, 0.8);
+
   color: white;
   display: inline-block;
-  margin: 0 2px;
+  margin: 2rem 0;
   font-weight: 700;
   font-size: 1rem;
   letter-spacing: 0.2vw;
   border: 1px solid rgb(255, 255, 255);
-  padding: 15px 50px 10px;
+  padding: 1rem;
 
   input {
-    width: 100%;
+    width: 80%;
     text-align: left;
     background-color: rgba(185, 179, 179, 0);
     border-bottom: solid 1.2px white;
     border-top: none;
     border-right: none;
     border-left: none;
-    margin: 0.5rem;
+    // margin: 0.5rem;
     color: white;
   }
   input:hover {
@@ -35,9 +36,8 @@
   }
 
   button {
-    background: rgba(255, 255, 255, 0.3);
+    background-color: rgba(5, 12, 32, 0);
     color: white;
-    border: solid 1.2px rgba(255, 255, 255, 0.3);
     border-radius: 8px;
     padding: 7px;
     margin: 7px;
@@ -49,7 +49,7 @@
     cursor: pointer;
   }
   button:hover {
-    background: rgba(2, 4, 32, 0.3);
+    background: rgba(20, 23, 59, 0.5);
     // border: solid rgba(255, 255, 255, 0.3) 1.2px;
   }
 }
