--- a/app/dashboard/grooves/page.module.scss
+++ b/app/dashboard/grooves/page.module.scss
@@ -83,6 +83,7 @@
     flex-direction: column;
 
     li {
+      max-width: 300px;
       box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
       backdrop-filter: blur(8.4px);
       -webkit-backdrop-filter: blur(8.4px);
@@ -99,6 +100,7 @@
     img {
       border-radius: 10px;
       width: 50vw;
+      max-width: 250px;
     }
     h3 {
       text-transform: uppercase;
