--- a/app/dashboard/grooves/participation-grooves/page.module.scss
+++ b/app/dashboard/grooves/participation-grooves/page.module.scss
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: column;
     li {
+      max-width: 300px;
       box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
       backdrop-filter: blur(8.4px);
       -webkit-backdrop-filter: blur(8.4px);
@@ -108,6 +109,7 @@
       img {
         border-radius: 10px;
         width: 50vw;
+        max-width: 250px;
       }
     }
   }
