--- a/app/dashboard/profile/[userId]/page.module.scss
+++ b/app/dashboard/profile/[userId]/page.module.scss
@@ -1,21 +1,23 @@
 .main {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 6rem 0;
+  margin: 7rem 0;
   width: 100vw;
+  padding-top: 2rem;
   font-weight: 400;
   font-size: 1rem;
   letter-spacing: 0.2vw;
   color: white;
-  background-color: rgba(5, 12, 32, 0.3);
+  background-color: rgba(5, 12, 32, 0.4);
 
   p {
     margin: 0;
   }
   .fadeIn:last-of-type {
-    border-bottom: solid white 1.2px;
+    // border-bottom: solid white 1.2px;
     padding-bottom: 1rem;
     margin: 1rem;
   }
@@ -24,7 +26,7 @@
     background: rgba(185, 179, 179, 0.1);
     border: solid rgba(255, 255, 255, 0.3) 1.2px;
     border-radius: 8px;
-    padding: 4px 1px;
+    padding: 2px 1px;
     margin: 0;
     width: 3rem;
     color: white;
@@ -36,21 +38,22 @@
   }
 }
 
-// .card {
-//   backdrop-filter: blur(8.4px);
-//   -webkit-backdrop-filter: blur(8.4px);
-//   background-color: rgba(5, 12, 32, 0.3);
-// }
+.card {
+  // backdrop-filter: blur(8.4px);
+  // -webkit-backdrop-filter: blur(8.4px);
+  // background-color: rgba(5, 12, 32, 0.3);
+  border-bottom: white 1.2px solid;
+}
 
 .form {
   margin: auto;
-  line-height: 1.5rem;
+  line-height: 1rem;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.8rem;
   letter-spacing: 0.2vw;
-  backdrop-filter: blur(8.4px);
-  -webkit-backdrop-filter: blur(8.4px);
-  background-color: rgba(5, 12, 32, 0.3);
+  // backdrop-filter: blur(8.4px);
+  // -webkit-backdrop-filter: blur(8.4px);
+  // background-color: rgba(5, 12, 32, 0.3);
 }
 .profileTitel {
   margin: 0;
@@ -77,6 +80,11 @@
   border-radius: 50%;
 }
 
+.logout {
+  box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
+  margin-bottom: 1rem;
+}
+
 .profileMenu {
   margin: 0.5rem;
   display: flex;
@@ -84,15 +92,15 @@
   align-items: center;
   line-height: 1rem;
   div {
+    box-shadow: 0 4px 30px rgba(243, 235, 235, 0.3);
     display: flex;
     justify-content: center;
-
-    font-size: 0.8rem;
+    font-size: 12px;
     border-radius: 8px;
-    padding: 6px 3px;
+    padding: 0.4rem;
     margin: 7px;
     width: 9rem;
-    height: 2.7rem;
+    height: 2.2rem;
     color: white;
     align-items: center;
 
