--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -14,6 +14,11 @@
   align-items: center;
   background-attachment: fixed;
 
+  body {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
   a,
   a:link,
   a:visited {
@@ -54,6 +59,9 @@
     // }
   }
 }
+.children {
+  align-items: center;
+}
 .profileImg {
   border-radius: 50%;
 }
@@ -66,10 +74,10 @@
   margin: 0;
   align-items: center;
   justify-content: space-between;
-  padding: 0.7rem 1.2rem;
+  padding: 0.4rem 1.2rem;
 
-  img {
-    // border-radius: 50%;
+  .img {
+    border-radius: 50%;
   }
 }
 
